--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-cookies": "^1.7.2",
+    "vue-infinite-loading": "^2.4.5",
+    "vue-rate-it": "^2.1.0",
+    "vue-router": "^3.2.0",
+    "vue-session": "^1.0.0",
+    "vue-simple-alert": "^1.1.1",
+    "vue-wysiwyg": "^1.7.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
