--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "vue-router": "^3.2.0",
     "vue-session": "^1.0.0",
     "vue-simple-alert": "^1.1.1",
-    "vue-wysiwyg": "^1.7.2"
+    "vue-wysiwyg": "^1.7.2",
+    "vue2-simple-calendar": "^1.0.8",
+    "vueperslides": "^2.10.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
