--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-router": "^3.2.0",
     "vue-session": "^1.0.0",
     "vue-simple-alert": "^1.1.1",
+    "vue-single-select": "^1.1.0",
     "vue-wysiwyg": "^1.7.2",
     "vue2-simple-calendar": "^1.0.8",
     "vueperslides": "^2.10.2"
