--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-session": "^1.0.0",
     "vue-simple-alert": "^1.1.1",
     "vue-single-select": "^1.1.0",
+    "vue-slim-scrolltop": "^0.1.0",
     "vue-wysiwyg": "^1.7.2",
     "vue2-simple-calendar": "^1.0.8",
     "vueperslides": "^2.10.2"
